--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
       </div>
     </div>
 
-    <select id="beat_1" class="header">
-      <option value="">-- clean slate --</option>
-    </select>
+    <div class="select-container">
+      <select id="beat_1" class="header">
+        <option value="">-- clean slate --</option>
+      </select>
+    </div>
 
     <iframe
       id="machine_1"
+      class="funklet-machine"
       src="https://machine.funklet.com/funklet.html"
     ></iframe>
 
