--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
     <div class="header-container">
       <div class="float-child-lhs">
         <h1 id="drummer_1">IT'S THE FUNKLET!</h1>
-
-        <p>
-          dive into the original
-          <a id="funklet_1" href="https://funklet.com/">funklet</a>
-        </p>
       </div>
 
       <div class="float-child-rhs">
         <div id="image-container">
           <div id="image-container-width">
-            <div id="image" style="background-image: none;"></div>
+            <a
+              id="funklet_1"
+              href="https://funklet.com/"
+              target="_blank"
+              tabindex="-1"
+            >
+              <div id="image" style="background-image: none;"></div>
+            </a>
           </div>
         </div>
       </div>
     </div>
 
     <div class="select-container">
-      <select id="beat_1" class="header">
+      <select id="beat_1" class="header" tabindex="0">
         <option value="">-- clean slate --</option>
       </select>
     </div>
