--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
       <div class="float-child-rhs">
         <div id="image-container">
           <div id="image-container-width">
-            <a
-              id="funklet_1"
-              href="https://funklet.com/"
-              target="_blank"
-              tabindex="-1"
-            >
+            <a id="funklet_1" href="https://funklet.com/" target="_blank">
               <div id="image" style="background-image: none;"></div>
             </a>
           </div>
@@ -30,7 +25,7 @@
     </div>
 
     <div class="select-container">
-      <select id="beat_1" class="header" tabindex="0">
+      <select id="beat_1" class="header">
         <option value="">-- clean slate --</option>
       </select>
     </div>
