--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="header-container">
       <div class="float-child-lhs">
         <h1 id="drummer_1">IT'S THE FUNKLET!</h1>
+        <h2 id="year_1">&nbsp;</h2>
       </div>
 
       <div class="float-child-rhs">
