add title to link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
       <div class="float-child-rhs">
         <div id="image-container">
           <div id="image-container-width">
-            <a id="funklet_1" href="https://funklet.com/" target="_blank">
+            <a
+              id="funklet_1"
+              href="https://funklet.com/"
+              title="Take me to the original Funklet!"
+              target="_blank"
+            >
               <div id="image" style="background-image: none;"></div>
             </a>
           </div>
